--- a/loginForm/src/main/webapp/WEB-INF/web.xml
+++ b/loginForm/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,9 @@
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
              http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	version="3.1">
-
+<!-- 	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list> -->
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>
